src/test/deca/syntax/invalid/resultats/test18_instr_bool-lex.res
'{': [@0,350:350='{',<36>,14:0]
IDENT: [@1,353:359='boolean',<26>,15:1]
IDENT: [@2,361:361='b',<26>,15:9]
'=': [@3,363:363='=',<29>,15:11]
'true': [@4,365:368='true',<24>,15:13]
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=15
./src/test/deca/syntax/invalid/test18_instr_bool.deca:15:18: token recognition error at: '| '
